adding duplication accounts handling and names of updating accounts